# production-trace-patterns

./: .gitignore  README.md  apply_pattern_combined.py  apply_pattern_use_cases.py  production-trace-patterns.ttl  pyproject.toml
event-data/: isa-95_1.ttl  isa-95_2.ttl
sparql/: elapsed-time_preceding.rq  entity-entity_partOf.rq  event-entity_all-preceding.rq  event-entity_all-succeeding.rq  event-entity_partOf.rq  event-entity_preceding.rq  interval_aggregate-attribute.rq
sparql-templates/: elapsed-time_maximum.rq  elapsed-time_preceding.rq  elapsed-time_succeeding-same.rq  entity-entity_partOf.rq  event-entity_all-preceding.rq  event-entity_all-succeeding.rq  event-entity_partOf.rq  event-entity_preceding.rq  interval_aggregate-attribute.rq  interval_count-event.rq
use_cases/automotive/: README.md  apply_pattern.py  context.json  docker-compose.yml  fuseki-config.ttl  load_data_rdf.py  pattern_use_cases.json  without_pattern.py
use_cases/automotive/sparql/: insert_event_uri.ru  insert_label.ru  insert_relation_entity.ru  insert_relation_inverse.ru  insert_type_entity.ru  insert_type_event.ru
use_cases/example/: README.md  apply_pattern_combined.py  apply_pattern_use_cases.py
use_cases/example/data/: isa-95_3.ttl
